commit before root changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -156,6 +156,7 @@
             android:screenOrientation="portrait" >
         </activity>
 
+        <!-- Sandeep Rana-->
     </application>
 
 </manifest>
