--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_ico_high"
         android:label="@string/app_name"
         android:theme="@style/CustomActionBarTheme" >
 
@@ -50,6 +50,7 @@
         <activity
             android:name="com.app.laundry.SplashActivity"
             android:label="@string/app_name"
+            android:noHistory="true"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
