--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.app.laundry"
-    android:installLocation="auto">
+    android:installLocation="auto" >
 
     <supports-screens
         android:anyDensity="true"
@@ -17,13 +17,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!--     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/> -->
+    <!-- <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/> -->
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
-
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <uses-feature
@@ -34,22 +32,19 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_ico_high"
         android:label="@string/app_name"
-        android:theme="@style/CustomActionBarTheme">
-
+        android:theme="@style/CustomActionBarTheme" >
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyAGfQIjH3gUwhOzlBCSKxvZz8TUmfLWRwc" />
 
-
         <activity
-            android:name="com.app.laundry.SplashActivity"
+            android:name=".SplashActivity"
             android:label="@string/app_name"
             android:noHistory="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -57,18 +52,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.app.laundry.LoginActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
-            android:name="com.app.laundry.RegisterActivity"
+            android:name=".RegisterActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"></activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name="com.app.laundry.BaseFragmentActivity"
+            android:name=".BaseFragmentActivity"
             android:alwaysRetainTaskState="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -76,60 +71,55 @@
             </intent-filter>
         </activity>
 
-        <!--<activity-->
-            <!--android:name="com.app.laundry.RateActivity"-->
-            <!--android:screenOrientation="portrait"-->
-            <!--android:theme="@android:style/Theme.Translucent.NoTitleBar"></activity>-->
+        <!-- <activity -->
+        <!-- android:name="com.app.laundry.RateActivity" -->
+        <!-- android:screenOrientation="portrait" -->
+        <!-- android:theme="@android:style/Theme.Translucent.NoTitleBar"></activity> -->
         <activity
-            android:name="com.app.laundry.New_Rate"
+            android:name=".New_Rate"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"></activity>
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
-            android:name="com.app.laundry.ChooseOnlineOfflineActivity"
+            android:name=".ChooseOnlineOfflineActivity"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"></activity>
-
-
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
-            android:name="com.app.laundry.LaundryBookingActivity"
-            android:screenOrientation="portrait"></activity>
-
+            android:name=".LaundryBookingActivity"
+            android:screenOrientation="portrait" />
         <activity
-            android:name="com.app.laundry.Add_CommentAddress"
-            android:screenOrientation="portrait"></activity>
-
+            android:name=".Add_CommentAddress"
+            android:screenOrientation="portrait" />
         <activity
-            android:name="com.app.laundry.EditAddressComment"
-            android:screenOrientation="portrait"></activity>
-
+            android:name=".EditAddressComment"
+            android:screenOrientation="portrait" />
         <activity
-            android:name="com.app.laundry.RateCart"
-            android:screenOrientation="portrait"></activity>
-
+            android:name=".RateCart"
+            android:screenOrientation="portrait" />
         <activity
-            android:name="com.app.laundry.CommentActivity"
-            android:screenOrientation="portrait"></activity>
+            android:name=".CommentActivity"
+            android:screenOrientation="portrait" />
         <activity
-            android:name="com.app.laundry.laundryDetailActivity"
-            android:screenOrientation="portrait"></activity>
+            android:name=".laundryDetailActivity"
+            android:screenOrientation="portrait" />
         <activity
-            android:name="com.app.laundry.SearchActivity"
+            android:name=".SearchActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden"></activity>
-
+            android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name="com.app.laundry.PolicyActivity"
-            android:screenOrientation="portrait"></activity>
-
+            android:name=".PolicyActivity"
+            android:screenOrientation="portrait" />
         <activity
-            android:name="com.app.laundry.LaundryReview"
-            android:screenOrientation="portrait"></activity>
-
+            android:name=".LaundryReview"
+            android:screenOrientation="portrait" />
         <activity
-            android:name="com.app.laundry.TermsActivity"
+            android:name=".TermsActivity"
             android:alwaysRetainTaskState="true"
-            android:screenOrientation="portrait"></activity>
-
+            android:screenOrientation="portrait" />
+        <activity
+            android:theme="@style/AlertDialog.AppCompat"
+            android:name=".DialogCustom"
+            android:label="@string/title_activity_dialog_custom" >
+        </activity>
     </application>
 
 </manifest>
